--- a/style.css
+++ b/style.css
@@ -1,8 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
 
 @media only screen and (max-width: 600px){
-	body{
-		background-color: pink;
+	.linkContainer{
+  	display: grid;
+  	grid-template-columns: repeat(5, 1fr);
+		height: auto;
+		gap: 35%;
+		font-size: 16pt;
+		font-weight: bold;
+		width: 100%;
+		padding: 2.5%;
+	}
+	.class1{
+		grid-column: 1;
+	}
+	.class2{
+		grid-column: 3;
+	}
+	.class3{
+		grid-column: 5;
 	}
 }
 body{
