--- a/style.css
+++ b/style.css
@@ -1,24 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
 
-@media only screen and (max-width: 600px){
-	.linkContainer{
-  	display: grid;
-  	grid-template-columns: repeat(5, 1fr);
-		height: auto;
-		gap: 35%;
-		font-size: 16pt;
-		font-weight: bold;
-		width: 100%;
-		padding: 2.5%;
+@media only screen and (max-width: 1000px){
+	body{
+		background-color: pink;
 	}
-	.class1{
-		grid-column: 1;
+	div.linkContainer{
+		gap: 10%;
 	}
-	.class2{
-		grid-column: 3;
-	}
-	.class3{
-		grid-column: 5;
+	div.imageClass{
+		height: 10vh;
 	}
 }
 body{
@@ -69,10 +59,6 @@ h3{
 
 .textbox{
 	width: 40%;
-}
-
-.gradient{
-	background-image: linear-gradient(black,#04005E);
 }
 
 .gallerytitle{
